// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DockRackSectionToolbar — snapshots should match snapshot with all sections active 1`] = `
<div
  class="w-10 wb-surface border-l wb-outline flex flex-col items-center py-3 gap-3 shrink-0 z-45 animate-in slide-in-from-right duration-200 shadow-lg"
>
  <div
    class="text-[5px] font-black uppercase text-foreground/45 tracking-widest text-center select-none pointer-events-none"
  >
    RACK SECT
  </div>
  <div
    class="flex flex-col items-center gap-1.5 "
  >
    <button
      aria-label="Toggle Identity"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Identity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Essential Identity"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Essential Identity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-tag w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
        />
        <circle
          cx="7.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Identity Branding"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Identity Branding"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cpu w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20v2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M17 20v2"
        />
        <path
          d="M17 2v2"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M2 17h2"
        />
        <path
          d="M2 7h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="M20 17h2"
        />
        <path
          d="M20 7h2"
        />
        <path
          d="M7 20v2"
        />
        <path
          d="M7 2v2"
        />
        <rect
          height="16"
          rx="2"
          width="16"
          x="4"
          y="4"
        />
        <rect
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </svg>
    </button>
  </div>
  <div
    class="w-5 h-px bg-white/10"
  />
  <div
    class="flex flex-col items-center gap-1.5 overflow-y-auto max-h-[50vh]"
  >
    <button
      aria-label="Toggle Global UI Skin"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Global UI Skin"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-palette w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
        />
        <circle
          cx="13.5"
          cy="6.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="17.5"
          cy="10.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="6.5"
          cy="12.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="8.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Construction Plane"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Construction Plane"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layout-grid w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="14"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="14"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Module Taxonomy"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Module Taxonomy"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-box w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
        />
        <path
          d="m3.3 7 8.7 5 8.7-5"
        />
        <path
          d="M12 22V12"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Physical Emulation Profile"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Physical Emulation Profile"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Aesthetics Globals"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Aesthetics Globals"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layers w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
        />
        <path
          d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
        />
        <path
          d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Aesthetics Elements"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Aesthetics Elements"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-palette w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
        />
        <circle
          cx="13.5"
          cy="6.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="17.5"
          cy="10.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="6.5"
          cy="12.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="8.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Architecture"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Architecture"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-panels-top-left w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M3 9h18"
        />
        <path
          d="M9 21V9"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Diagnostics"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Diagnostics"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`DockRackSectionToolbar — snapshots should match snapshot with all sections inactive 1`] = `
<div
  class="w-10 wb-surface border-l wb-outline flex flex-col items-center py-3 gap-3 shrink-0 z-45 animate-in slide-in-from-right duration-200 shadow-lg"
>
  <div
    class="text-[5px] font-black uppercase text-foreground/45 tracking-widest text-center select-none pointer-events-none"
  >
    RACK SECT
  </div>
  <div
    class="flex flex-col items-center gap-1.5 "
  >
    <button
      aria-label="Toggle Identity"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Identity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Essential Identity"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Essential Identity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-tag w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
        />
        <circle
          cx="7.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Identity Branding"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Identity Branding"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cpu w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20v2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M17 20v2"
        />
        <path
          d="M17 2v2"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M2 17h2"
        />
        <path
          d="M2 7h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="M20 17h2"
        />
        <path
          d="M20 7h2"
        />
        <path
          d="M7 20v2"
        />
        <path
          d="M7 2v2"
        />
        <rect
          height="16"
          rx="2"
          width="16"
          x="4"
          y="4"
        />
        <rect
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </svg>
    </button>
  </div>
  <div
    class="w-5 h-px bg-white/10"
  />
  <div
    class="flex flex-col items-center gap-1.5 overflow-y-auto max-h-[50vh]"
  >
    <button
      aria-label="Toggle Global UI Skin"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Global UI Skin"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-palette w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
        />
        <circle
          cx="13.5"
          cy="6.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="17.5"
          cy="10.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="6.5"
          cy="12.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="8.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Construction Plane"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Construction Plane"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layout-grid w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="14"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="14"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Module Taxonomy"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Module Taxonomy"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-box w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
        />
        <path
          d="m3.3 7 8.7 5 8.7-5"
        />
        <path
          d="M12 22V12"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Physical Emulation Profile"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Physical Emulation Profile"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Aesthetics Globals"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Aesthetics Globals"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layers w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
        />
        <path
          d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
        />
        <path
          d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Aesthetics Elements"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Aesthetics Elements"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-palette w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
        />
        <circle
          cx="13.5"
          cy="6.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="17.5"
          cy="10.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="6.5"
          cy="12.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="8.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Architecture"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Architecture"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-panels-top-left w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M3 9h18"
        />
        <path
          d="M9 21V9"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Diagnostics"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Diagnostics"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`DockRackSectionToolbar — snapshots should match snapshot with mixed active/inactive 1`] = `
<div
  class="w-10 wb-surface border-l wb-outline flex flex-col items-center py-3 gap-3 shrink-0 z-45 animate-in slide-in-from-right duration-200 shadow-lg"
>
  <div
    class="text-[5px] font-black uppercase text-foreground/45 tracking-widest text-center select-none pointer-events-none"
  >
    RACK SECT
  </div>
  <div
    class="flex flex-col items-center gap-1.5 "
  >
    <button
      aria-label="Toggle Identity"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Identity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-info w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16v-4"
        />
        <path
          d="M12 8h.01"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Essential Identity"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Essential Identity"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-tag w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
        />
        <circle
          cx="7.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Identity Branding"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Identity Branding"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-cpu w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20v2"
        />
        <path
          d="M12 2v2"
        />
        <path
          d="M17 20v2"
        />
        <path
          d="M17 2v2"
        />
        <path
          d="M2 12h2"
        />
        <path
          d="M2 17h2"
        />
        <path
          d="M2 7h2"
        />
        <path
          d="M20 12h2"
        />
        <path
          d="M20 17h2"
        />
        <path
          d="M20 7h2"
        />
        <path
          d="M7 20v2"
        />
        <path
          d="M7 2v2"
        />
        <rect
          height="16"
          rx="2"
          width="16"
          x="4"
          y="4"
        />
        <rect
          height="8"
          rx="1"
          width="8"
          x="8"
          y="8"
        />
      </svg>
    </button>
  </div>
  <div
    class="w-5 h-px bg-white/10"
  />
  <div
    class="flex flex-col items-center gap-1.5 overflow-y-auto max-h-[50vh]"
  >
    <button
      aria-label="Toggle Global UI Skin"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Global UI Skin"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-palette w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
        />
        <circle
          cx="13.5"
          cy="6.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="17.5"
          cy="10.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="6.5"
          cy="12.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="8.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Construction Plane"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Construction Plane"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layout-grid w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="3"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="14"
          y="14"
        />
        <rect
          height="7"
          rx="1"
          width="7"
          x="3"
          y="14"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Module Taxonomy"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Module Taxonomy"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-box w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16Z"
        />
        <path
          d="m3.3 7 8.7 5 8.7-5"
        />
        <path
          d="M12 22V12"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Physical Emulation Profile"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Physical Emulation Profile"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Aesthetics Globals"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Aesthetics Globals"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-layers w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
        />
        <path
          d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
        />
        <path
          d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Aesthetics Elements"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Aesthetics Elements"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-palette w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
        />
        <circle
          cx="13.5"
          cy="6.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="17.5"
          cy="10.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="6.5"
          cy="12.5"
          fill="currentColor"
          r=".5"
        />
        <circle
          cx="8.5"
          cy="7.5"
          fill="currentColor"
          r=".5"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Architecture"
      aria-pressed="false"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 wb-text-muted hover:wb-text hover:bg-primary/10 "
      title="Toggle Architecture"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-panels-top-left w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="3"
        />
        <path
          d="M3 9h18"
        />
        <path
          d="M9 21V9"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle Diagnostics"
      aria-pressed="true"
      class="flex items-center justify-center rounded-xs transition-all w-7 h-7 bg-primary/20 text-primary border border-primary/20 shadow-[0_0_8px_rgba(var(--primary-rgb),0.1)]"
      title="Toggle Diagnostics"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-activity w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12h-2.48a2 2 0 0 0-1.93 1.46l-2.35 8.36a.25.25 0 0 1-.48 0L9.24 2.18a.25.25 0 0 0-.48 0l-2.35 8.36A2 2 0 0 1 4.49 12H2"
        />
      </svg>
    </button>
  </div>
</div>
`;
